src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.cursor-pointer {
  cursor: pointer;
}

.table-fixed {
  table-layout: fixed;
  width: 100%;
  /*ie7*/
}

.fixed-td,
.fixed-th {
  vertical-align: top;
  border-top: 1px solid #ccc;
  padding: 10px;
  width: 100px;
}

.fix {
  position: absolute;
  /*ie7*/
  margin-left: -200px;
  width: 200px;
  z-index: 10;
  background: rgba(88, 26, 233, 1);
}

.baseline {
  align-content: baseline;
}

.compare-color {
  background: rgba(88, 26, 233, 1);
}

.compare-color-text {
  color: rgba(88, 26, 233, 1);
}

.outer {
  position: relative;
  overflow: hidden;
}

.inner {
  overflow-x: scroll;
  overflow-y: visible;
  width: 900px;
}

.subgroup-colour {
  color: black !important;
  background-color: #C7EAE4 !important;
}

.bg-compare-column {
  background: rgba(88, 26, 233, 1);
}


.horizontal-scroll-except-first-column {
  width: 100%;
  overflow: auto;
}

.horizontal-scroll-except-first-column>table {
  margin-left: 350px;
}

.horizontal-scroll-except-first-column>table>*>tr>th:first-child,
.horizontal-scroll-except-first-column>table>*>tr>td:first-child {
  /* position: absolute;
  width: 200px;
  margin-left: -350px; */
  background: rgba(88, 26, 233, 1);
  height: '40%';
}

.horizontal-scroll-except-first-column>table>*>tr>th,
.horizontal-scroll-except-first-column>table>*>tr>td {
  /* Without this, if a cell wraps onto two lines, the first column
   * will look bad, and may need padding. */
  /* white-space: nowrap; */
  min-width: 350px;
  max-width: 450px;
  height: '100%';
}

